--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.9",
     "axios": "^0.20.0",
+    "graphql": "^15.3.0",
     "react": "^16.13.1",
     "react-apollo": "^3.1.5",
+    "react-chartjs-2": "^2.10.0",
     "react-countup": "^4.3.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
@@ -22,7 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "proxy":"http://localhost:5000",
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
