--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "prac":"nodemon server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm start\"  \"npm run client\""
   },
@@ -27,7 +28,9 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-flash": "0.0.2",
+    "express-graphql": "^0.11.0",
     "express-session": "^1.17.1",
+    "graphql": "^15.3.0",
     "inquirer": "^7.3.3",
     "mongoose": "^5.10.3"
   },
