--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "prac":"nodemon server.js",
+    "prac": "nodemon server.js",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm start\"  \"npm run client\"",
+    "dev": "concurrently \"npm run prac\"  \"npm run client\"",
     "install": "cd client && npm install",
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
@@ -26,6 +26,7 @@
   "dependencies": {
     "commander": "^6.1.0",
     "connect-mongo": "^3.2.0",
+    "connect-redis": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -34,7 +35,8 @@
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "inquirer": "^7.3.3",
-    "mongoose": "^5.10.3"
+    "mongoose": "^5.10.3",
+    "redis": "^3.0.2"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
